trafficM_Kiali_GW_VS_DR/isti/ing/mainGateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: istio-ingress-gateway

spec:

  selector:
    istio: ingressgateway
    app: istio-ingressgateway

  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "azalio.az"
    - "main-service-v1-tm.prm.svc.cluster.local"
